@@ -1,3 +1,8 @@
+Thu Apr 17 17:52:20 2003  David Helder  <dhelder@umich.edu>
+
+	* tests/inetaddr_test.c (main): More IPv6 fixes.
+	* configure.ac: Check for -pthreads (alternative to -pthread)
+
 Wed Apr 16 15:21:21 2003  David Helder  <dhelder@umich.edu>
 
 	* src/inetaddr.c (gnet_gethostbyname): Remover sa_inp - not used.
